<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/mangoImage"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/mango_launcher_foreground" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:text="@string/sign_in_title"
        android:textAlignment="center"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mangoImage"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_marginTop="15dp"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/teal_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:hintTextColor="@color/teal_700"
        app:hintTextAppearance="@color/teal_700"
        app:placeholderTextColor="@color/teal_700"
        app:helperTextTextColor="@color/teal_700"
        app:errorTextColor="@color/teal_700"
        app:helperTextTextAppearance="@color/teal_700"
        app:errorTextAppearance="@color/teal_700"
        app:boxStrokeColor="@color/orange"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEmailAddress"
            android:textSize="20sp"
            android:hint="@string/email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/teal_200"
            android:background="#222222"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_marginTop="15dp"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/teal_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutEmail"
        app:hintTextColor="@color/teal_700"
        app:hintTextAppearance="@color/teal_700"
        app:placeholderTextColor="@color/teal_700"
        app:helperTextTextColor="@color/teal_700"
        app:errorTextColor="@color/teal_700"
        app:helperTextTextAppearance="@color/teal_700"
        app:errorTextAppearance="@color/teal_700"
        app:boxStrokeColor="@color/orange"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputPassword"
            android:textSize="20sp"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/teal_200"
            android:background="#222222"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/MaterialButtonLogin"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutPassword"
        android:text="@string/login"
        app:backgroundTint="@color/orange"/>

</androidx.constraintlayout.widget.ConstraintLayout>